--- a/index.html
+++ b/index.html
@@ -70,6 +70,55 @@
         </div>
       </div>
     </section>
+    <section id="about">
+      <p class="section__text_p1">Conocerme más</p>
+      <h1 class="title">Sobre mi</h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+          <img
+            src="assets/about-pic.png"
+            alt="Profile Picture"
+            class="about-pic"
+          />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img
+                src="assets/experience.png"
+                alt="experience icon"
+                class="icon"
+              />
+              <h3>Experiencia</h3>
+              <p>1 año <br />Backend Development</p>
+            </div>
+            <div class="details-container">
+              <img
+                src="assets/education.png"
+                alt="education icon"
+                class="icon"
+              />
+              <h3>Educación</h3>
+              <p>Soy Henry<br />Full Stack Developer</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. A magni
+              sequi iusto vel, maxime minus totam, quibusdam ex assumenda neque
+              reiciendis ipsum! Illum, enim facere autem voluptatum repellendus
+              cumque delectus?
+            </p>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon"
+        onclick="location.href='./#experience'"
+      />
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
