--- a/index.html
+++ b/index.html
@@ -360,11 +360,11 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#projects'"
+        onclick="location.href='./#contact'"
       />
     </section>
     <section id="contact">
-      <p class="section__text__p1">Ponte en contacto</p>
+      <!-- <p class="section__text__p1">Ponte en contacto</p> -->
       <h1 class="title">Contactame</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
@@ -393,6 +393,19 @@
         </div>
       </div>
     </section>
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2023 Juan Leonel Pogonza. All Rights Reserved.</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
