--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </ul>
       </div>
     </nav>
-    <nav id="hamburguer-nav">
+    <nav id="hamburger-nav">
       <div class="logo">Leonel Pogonza</div>
-      <div class="hamburguer-menu">
-        <div class="hamburguer-icon" onclick="toggleMenu()">
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
           <span></span>
           <span></span>
