--- a/index.html
+++ b/index.html
@@ -93,23 +93,28 @@
               <p>1 año<br />Backend Development</p>
             </div>
             <div class="details-container">
-              <img
-                src="./assets/education.png"
-                alt="Education icon"
-                class="icon"
-              />
+              <a
+                href="https://certificates.soyhenry.com/new-cert?id=ba45fdde22be95a551502dbf7b24b34188d0861b80388c0a82a2377ab260ae49"
+              >
+                <img
+                  src="./assets/education.png"
+                  alt="Education icon"
+                  class="icon"
+                />
+              </a>
               <h3>Educación</h3>
               <p>Soy Henry<br />Full Stack Developer</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              ¡Hola! Soy un Junior Full Stack Developer apasionado por la
+              tecnología y el desarrollo web. Disfruto trabajar en equipo y
+              aprender algo nuevo cada día.🚀 Como desarrollador, mi objetivo
+              sigue siendo el mismo: continuar perfeccionando mis habilidades
+              técnicas y personales para crear soluciones web innovadoras y
+              efectivas que mejoren la experiencia del usuario y cumplan con las
+              necesidades de nuestros clientes.
             </p>
           </div>
         </div>
@@ -290,17 +295,19 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Proyecto 1</h2>
+            <h2 class="experience-sub-title project-title">
+              Jenshy Supplements
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/LeoPogonza'"
+                onclick="location.href='https://github.com/cerramaximiliano/pf-henry'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/LeoPogonza'"
+                onclick="location.href='https://genshysupplements.vercel.app/home'"
               >
                 Live Demo
               </button>
@@ -314,23 +321,23 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Proyecto 2</h2>
+            <h2 class="experience-sub-title project-title">Doggy Dogg</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/LeoPogonza'"
+                onclick="location.href='https://github.com/LeoPogonza/Doggy-Dogg-PI'"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/LeoPogonza'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
-          <div class="details-containers color-container">
+          <!-- <div class="details-containers color-container">
             <div class="article-container">
               <img
                 src="./assets/project-3.png"
@@ -353,7 +360,7 @@
                 Live Demo
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <img
